--- a/artists.html
+++ b/artists.html
@@ -102,13 +102,75 @@
         </header>
 
         <main class="col-8 p-0 pt-1">
-          <div class="bg-dark p-0">
-            <div id="artistBanner" class="container-fluid"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+          <div id="artistBanner" class="bg-dark p-0 opacity-50">
+            <div id="verifiedArtist" class="container-fluid px-3 mb-0 mt-auto"></div>
+            <div id="artistTitle" class="container-fluid px-3 mb-auto"></div>
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="white"
+                class="bi bi-three-dots"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="container-fluid">
+            <div id="containerList" class="d-flex align-items-center">
+              <button
+                class="btn btn-success rounded-circle m-4 d-flex align-items-center justify-content-center"
+                style="width: 50px; height: 50px"
+              >
+                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                  <path
+                    fill="#000000"
+                    d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
+                  ></path>
+                </svg>
+              </button>
+              <button
+                class="btn btn-transparent border border-light text-white text-center"
+                height="fit-content"
+                font-size="0.8rem"
+              >
+                FOLLOWING
+              </button>
+              <div class="mx-4">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30"
+                  height="30"
+                  fill="currentColor"
+                  class="bi bi-three-dots"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="d-flex justify-content-between px-4 me-4">
+              <h5>Popolari</h5>
+              <h5>Brani che ti piacciono</h5>
+            </div>
+            <div class="row">
+              <div class="col-12 col-md-8 d-flex justify-content-between align-items-center">
+                <ul id="songsList">
+                  <div class="d-flex align-items-center"></div>
+                </ul>
+                <div class="d-flex justify-content-between">
+                  <p id="views">3.765.987</p>
+                  <p id="minutes"></p>
+                </div>
+              </div>
+            </div>
+            <div id="likedSongs" class="col-12 col-md-4"></div>
           </div>
         </main>
         <aside class="col-2 rounded bg-dark"></aside>
