--- a/artists.html
+++ b/artists.html
@@ -160,15 +160,12 @@
               <h5>Brani che ti piacciono</h5>
             </div>
             <div class="row">
-              <div class="col-12 col-md-8 d-flex justify-content-between align-items-center">
+              <div class="col-12 col-md-8 d-flex justify-content-between g-0 align-items-center">
                 <ul id="songsList">
                   <div class="d-flex align-items-center"></div>
                 </ul>
-                <div class="d-flex justify-content-between">
-                  <p id="views">3.765.987</p>
-                  <p id="minutes"></p>
-                </div>
               </div>
+              <div id="viewsCont"></div>
             </div>
             <div id="likedSongs" class="col-12 col-md-4"></div>
           </div>
