--- a/artists.html
+++ b/artists.html
@@ -102,22 +102,9 @@
         </header>
 
         <main class="col-8 p-0 pt-1">
-          <div id="artistBanner" class="bg-dark p-0 opacity-50">
-            <div id="verifiedArtist" class="container-fluid px-3 mb-0 mt-auto"></div>
-            <div id="artistTitle" class="container-fluid px-3 mb-auto"></div>
-            <div>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="white"
-                class="bi bi-three-dots"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"
-                />
-              </svg>
+          <div id="artistBanner" class="bg-dark p-0">
+            <div id="artistTitle" class="container-fluid px-3 mt-auto">
+              <div id="verifiedArtist" class="container-fluid px-3 mb-0 mt-auto"></div>
             </div>
           </div>
           <div class="container-fluid">
@@ -155,7 +142,7 @@
                 </svg>
               </div>
             </div>
-            <div class="d-flex justify-content-between px-4 me-4">
+            <div class="d-flex justify-content-between px-4 me-4 mb-4">
               <h5>Popolari</h5>
               <h5>Brani che ti piacciono</h5>
             </div>
