--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -75,8 +75,8 @@
                   <div class="col-3 mt-3">
                     <img id="albumImg" src="./assets/imgs/main/image-1.jpg" alt="" style="height: 230px" />
                   </div>
-                  <div class="col-8 mt-5 p-0">
-                    <h6 class="mt-4">Album</h6>
+                  <div class="col-8 p-0">
+                    <h6 class="mt-3">Album</h6>
                     <h1 class="display-1 fw-bold mb-3" id="albumTitle">Gioventu bruciata</h1>
                     <div class="d-flex">
                       <img
