--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -93,8 +93,8 @@
             </div>
           </div>
         </div>
-        <div class="container" id="tabella">
-          <div class="row mt-2">
+        <div class="container">
+          <div class="row mt-2" id="tabella">
             <div class="col d-flex mt-4 ms-3">
               <button class="rounded-circle border border-dark me-3 p-2" id="playBtn">
                 <svg
