--- a/home.html
+++ b/home.html
@@ -151,8 +151,8 @@
 
         <main class="col-8 rounded" data-bs-theme="dark">
           <div class="bg-dark p-0 rounded">
-            <div class="d-flex align-items-center pt-3 px-2">
-              <div class="me-auto">
+            <div class="d-flex align-items-center pt-3 px-2 mb-3">
+              <div class="d-flex me-auto">
                 <button class="btn rounded-circle bg-black" style="width: 40px; height: 40px">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 21px" viewBox="0 0 20 20">
                     <path
@@ -169,6 +169,21 @@
                     ></path>
                   </svg>
                 </button>
+
+                <form role="search" class="d-flex justify-content-center align-items-center p-1">
+                  <input
+                    class="rounded-pill border-0 p-1"
+                    data-encore-id="text"
+                    maxlength="800"
+                    autocorrect="off"
+                    autocapitalize="off"
+                    spellcheck="false"
+                    placeholder="     Cosa vuoi ascoltare?"
+                    data-testid="search-input"
+                    value=""
+                    style="color: rgb(0, 0, 0)"
+                  />
+                </form>
               </div>
               <div class="d-flex gap-2">
                 <button class="btn bg-white rounded-pill text-black"><b>Esplora Premium</b></button>
@@ -215,41 +230,49 @@
                 </button>
               </div>
             </div>
-
-            <div
-              class="col-12 my-3 bg-dark"
-              style="
-                background: rgb(0, 0, 0);
-                background: linear-gradient(17deg, rgba(0, 0, 0, 1) 50%, rgba(32, 32, 32, 0.644782913165266) 100%);
-              "
-            >
-              <div id="annunci" class="d-flex p-3">
-                <img src="" id="imgAnnunci" class="me-5 object-fit-cover" width="200" height="200" alt="cover album" />
+            <div class="scrollbar px-3" style="height: 87vh">
+              <div
+                class="col-12 my-3 bg-dark"
+                style="
+                  background: rgb(0, 0, 0);
+                  background: linear-gradient(17deg, rgba(0, 0, 0, 1) 50%, rgba(32, 32, 32, 0.644782913165266) 100%);
+                "
+              >
+                <div id="annunci" class="d-flex p-3">
+                  <img
+                    src=""
+                    id="imgAnnunci"
+                    class="me-5 object-fit-cover"
+                    width="200"
+                    height="200"
+                    alt="cover album"
+                  />
+                </div>
               </div>
-            </div>
-            <div id="perTe" class="row g-0 bg-dark">
-              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
-                >Create per te</a
-              >
-            </div>
-            <div id="perOggi" class="row g-0 bg-dark">
-              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
-                >Consigliata per oggi</a
-              >
-            </div>
-            <div id="popolari" class="row g-0 bg-dark">
-              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
-                >Album più popolari</a
-              >
-            </div>
-            <div id="mixPref" class="row g-0 bg-dark">
-              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
-                >I tuoi mix preferiti</a
-              >
+              <div id="perTe" class="row g-0 bg-dark">
+                <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
+                  >Create per te</a
+                >
+              </div>
+              <div id="perOggi" class="row g-0 bg-dark">
+                <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
+                  >Consigliata per oggi</a
+                >
+              </div>
+              <div id="popolari" class="row g-0 bg-dark">
+                <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
+                  >Album più popolari</a
+                >
+              </div>
+              <div id="mixPref" class="row g-0 bg-dark">
+                <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#"
+                  >I tuoi mix preferiti</a
+                >
+              </div>
             </div>
           </div>
         </main>
-        <aside class="col-2 rounded bg-dark" style="height: 100vh"></aside>
+        <aside class="col-2 rounded bg-dark"></aside>
       </div>
       <footer class="fixed-bottom bg-black p-0 m-0 container-fluid" style="height: 90px; width: 100wh">
         <div class="row p-2">
