--- a/artists.html
+++ b/artists.html
@@ -144,17 +144,21 @@
             </div>
             <div class="d-flex justify-content-between px-4 me-4 mb-4">
               <h5>Popolari</h5>
-              <h5>Brani che ti piacciono</h5>
-            </div>
-            <div class="row">
-              <div class="col-12 col-md-8 d-flex justify-content-between g-0 align-items-center">
-                <ul id="songsList">
-                  <div class="d-flex align-items-center"></div>
-                </ul>
+              <div>
+                <h5>Brani che ti piacciono</h5>
               </div>
-              <div id="viewsCont"></div>
             </div>
-            <div id="likedSongs" class="col-12 col-md-4"></div>
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-md-8 d-flex justify-content-between g-0 align-items-center">
+                  <!-- <div class="d-flex align-items-center"> -->
+                  <div id="songsList" class="row"></div>
+                  <!-- </div> -->
+                </div>
+
+                <div id="likedSongs" class="col-12 col-sm-4"></div>
+              </div>
+            </div>
           </div>
         </main>
         <aside class="col-2 rounded bg-dark"></aside>
