--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     <div class="">
       <div class="row p-2">
         <header class="col-2 rounded p-0">
-          <div class="rounded bg-darkness p-4 mb-2 d-flex justify-content-center align-items-center d-lg-block" style="height: 15vh">
-            <ul class="list-unstyled d-flex flex-column gap-3 m-0 mt-2">
+          <div class="rounded bg-darkness mb-2 d-lg-block" style="height: 15vh">
+            <ul class="list-unstyled d-flex p-2 justify-content-center flex-column gap-3 m-0">
               <li class="align-middle pointer" id="homeBtn">
                 <svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24" style="width: 30">
                   <path
@@ -42,7 +42,7 @@
             </ul>
           </div>
           <div class="bg-darkness rounded p-3">
-            <div class="bg-darkness" style="height: 10vh">
+            <div class="bg-darkness mb-3" style="height: 10vh">
               <div class="d-flex">
                 <button class="btn text-white me-auto bg-darkness mb-2 p-1" style="width: 150px">
                   <span>
@@ -86,7 +86,7 @@
                 </button>
               </div>
             </div>
-            <div class="scrollbar text-truncate d-flex justify-content-center align-items-center d-xl-block" style="height: 60vh">
+            <div class="scrollbar text-truncate d-flex justify-content-center align-items-center d-xl-block" style="height: 56vh">
               <div class="d-flex justify-content-between">
                 <button class="btn d-none d-xl-inline">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 15px" viewBox="0 0 16 16">
@@ -186,7 +186,7 @@
               <div>
                 <div class="my-3 mx-3" style="background: linear-gradient(13deg, rgba(0, 0, 0, 1) 0%, rgba(18, 18, 18, 1) 90%)">
                   <div id="annunci" class="d-flex align-items-center flex-column flex-lg-row p-3">
-                    <img src="" id="imgAnnunci" class="me-5 object-fit-cover" width="200" height="200" alt="cover album" />
+                    <img src="" id="imgAnnunci" class="me-lg-5 object-fit-cover" width="200" height="200" alt="cover album" />
                   </div>
                 </div>
               </div>
@@ -205,76 +205,76 @@
               <div id="mixPref" class="row g-0 bg-darkness">
                 <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Uno sguardo al passato</a>
               </div>
-              <section class="mt-5 text-secondary">
+              <section class="mt-5 d-none d-md-block text-secondary">
                 <div class="container">
                   <div class="row align-items-top">
                     <div class="col-9">
                       <div class="row">
                         <div class="col-3">
                           <ul class="navbar-nav">
-                            <h5 class="text-white">Azienda</h5>
+                            <h6 class="text-white">Azienda</h6>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Chi siamo</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Chi siamo</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Opportunità di lavoro</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Opportunità di lavoro</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">For the Record</a>
-                            </li>
-                          </ul>
-                        </div>
-                        <div class="col-3">
-                          <h5 class="text-white">Community</h5>
-                          <ul class="navbar-nav" data-bs-theme="dark">
-                            <li>
-                              <a class="nav-link" aria-current="page" href="#">Per artisti</a>
-                            </li>
-                            <li>
-                              <a class="nav-link" aria-current="page" href="#">Sviluppatori</a>
-                            </li>
-                            <li>
-                              <a class="nav-link" aria-current="page" href="#">Pubblicità</a>
-                            </li>
-                            <li>
-                              <a class="nav-link" aria-current="page" href="#">Investitori</a>
-                            </li>
-                            <li>
-                              <a class="nav-link" aria-current="page" href="#">Venditori</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">For the Record</a>
                             </li>
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5 class="text-white">Link utili</h5>
+                          <h6 class="text-white">Community</h6>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Assistenza</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Per artisti</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">App per cellulare gratuita</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Sviluppatori</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Diritti del consumatore</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Pubblicità</a>
+                            </li>
+                            <li>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Investitori</a>
+                            </li>
+                            <li>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Venditori</a>
                             </li>
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5 class="text-white">Piani Spotify</h5>
+                          <h6 class="text-white">Link utili</h6>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Premium Individual</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Assistenza</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Premium Duo</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">App per cellulare gratuita</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Premium Family</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Diritti del consumatore</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="col-3">
+                          <h6 class="text-white">Piani Spotify</h6>
+                          <ul class="navbar-nav" data-bs-theme="dark">
+                            <li>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Premium Individual</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Premium Student</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Premium Duo</a>
                             </li>
                             <li>
-                              <a class="nav-link" aria-current="page" href="#">Spotify Free</a>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Premium Family</a>
+                            </li>
+                            <li>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Premium Student</a>
+                            </li>
+                            <li>
+                              <a class="nav-link fs-7" aria-current="page" href="#">Spotify Free</a>
                             </li>
                           </ul>
                         </div>
@@ -307,14 +307,14 @@
                     <hr class="text-secondary my-3" />
 
                     <div>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informazioni legali</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Sicurezza e Centro sulla privacy</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informativa sulla privacy</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Impostazioni cookie</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Info annunci</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5 text-secondary" href="#">Accessibilità</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary fs-7" href="#">Informazioni legali</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary fs-7" href="#">Sicurezza e Centro sulla privacy</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary fs-7" href="#">Informativa sulla privacy</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary fs-7" href="#">Impostazioni cookie</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary fs-7" href="#">Info annunci</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5 text-secondary fs-7" href="#">Accessibilità</a>
                       <br />
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5 text-secondary" href="#">© 2024 Apotify AB</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-6 text-secondary" href="#">© 2024 Apotify AB</a>
                     </div>
                   </div>
                 </div>
