--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -737,5 +737,6 @@
     <script src="./AlbumPage.js"></script>
     <script src="./lista.js"></script>
     <script src="./footer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.umd.js"></script>
   </body>
 </html>
