--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -260,7 +260,7 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col " class="d-table-cell mt-3 col-xxl-5">Titolo</th>
-                  <th scope="col" class="d-none d-xxl-table-cell col-xxl-3">Riproduzioni</th>
+                  <th scope="col" class="d-none d-xxl-table-cell col-xxl-3 ps-5">Riproduzioni</th>
                   <th scope="col" class="d-none d-lg-table-cell col-xxl-3 ps-xxl-5">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
