--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -255,13 +255,13 @@
                 </button>
               </div>
             </div>
-            <table class="table-dark text-white mt-4 ms-5 w-100 hidden" id="hiddenThead">
+            <table class="table-dark text-white mt-4 mb-2 w-100 hidden" id="hiddenThead">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
-                  <th scope="col " class="d-table-cell mt-3 col-xxl-5">Titolo</th>
-                  <th scope="col" class="d-none d-xxl-table-cell col-xxl-3 ps-5">Riproduzioni</th>
-                  <th scope="col" class="d-none d-lg-table-cell col-xxl-3 ps-xxl-5">
+                  <th scope="col" class="ps-4">#</th>
+                  <th scope="col" class="d-table-cell mt-3 col-xxl-6">Titolo</th>
+                  <th scope="col" class="d-none d-xxl-table-cell col-xxl-2 ps-5">Riproduzioni</th>
+                  <th scope="col" class="d-none d-lg-table-cell col-xxl-3 ps-5">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
