--- a/artists.html
+++ b/artists.html
@@ -260,6 +260,7 @@
               <div class="container-fluid">
                 <div id="containerList" class="d-flex align-items-center">
                   <button
+                    id="btnPlayArtist"
                     class="btn btn-success rounded-circle m-4 d-flex align-items-center justify-content-center"
                     style="width: 50px; height: 50px"
                   >
